--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Sat Oct 15 15:49:18 EDT 2022
+#Sun Nov 13 13:05:12 EST 2022
 enable-jmx-monitoring=false
 rcon.port=25575
 level-seed=
