--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Mon Dec 12 19:18:03 EST 2022
+#Thu Dec 22 19:20:06 CST 2022
 enable-jmx-monitoring=false
 rcon.port=25575
 level-seed=
@@ -29,7 +29,7 @@ view-distance=10
 server-ip=
 resource-pack-prompt=
 allow-nether=true
-server-port=25563
+server-port=25564
 enable-rcon=false
 sync-chunk-writes=true
 op-permission-level=4
