--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Wed Dec 28 12:03:39 CST 2022
+#Wed Dec 28 13:23:24 CST 2022
 enable-jmx-monitoring=false
 rcon.port=25575
 level-seed=
@@ -14,7 +14,7 @@ query.port=25565
 pvp=true
 generate-structures=true
 max-chained-neighbor-updates=1000000
-difficulty=easy
+difficulty=hard
 network-compression-threshold=256
 max-tick-time=60000
 require-resource-pack=false
